grammar.js
    source_file: $ => repeat($._node),
    _node: $ => choice($.print, $.if_statement, $.for_statement, $.extends_statement, $.include_statement, $.import_statement, $.from_statement, $.set_statement, $.set_block, $.call_block, $.with_statement, $.trans_statement, $.do_statement, $.autoescape_statement, $.raw_statement, $.debug_statement, $.filter_statement, $.block_statement, $.macro_statement, $.custom_statement, $.comment, $.text),
    statement_begin: $ => token(choice('{%', '{%-')),
    statement_end: $ => token(choice('%}', '-%}')),
    print_begin: $ => token(choice('{{', '{{-')),
    print_end: $ => token(choice('}}', '-}}')),
    identifier: $ => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),
    string: $ => choice(
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
      seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
    ),
    number: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /0[bB][01]+/,
      /\d+(\.\d+)?([eE][+-]?\d+)?/,
    )),
    keyword_argument: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),
    _argument_list: $ => seq(
      '(',
      optional(seq(
        $._argument,
        repeat(seq(',', $._argument)),
        optional(','),
      )),
      ')',
    ),
    function_call: $ => prec.left(seq(
      field('name', choice($.identifier, $.function_call)),
      $._argument_list,
    )),
    method_call: $ => prec.left(seq(
      field('object', $._primary_expression),
      '.',
      field('method', $.identifier),
      $._argument_list,
    )),
    pair: $ => seq(
      field('key', $._expression),
      ':',
      field('value', $._expression),
    ),
    dict: $ => seq(
      '{',
      optional(seq(
        $.pair,
        repeat(seq(',', $.pair)),
        optional(','),
      )),
      '}',
    ),
    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),
    _unfiltered_expression: $ => choice(
      $._primary_expression,
      $.binary_expression,
      $.unary_expression,
      $.test_expression,
      $.ternary_expression,
    ),
    filter: $ => prec.left(seq(
      field('value', $._unfiltered_expression),
      repeat1(seq(
        token(prec(11, seq(optional(/\s+/), '|'))),
        field('filter', $.filter_name),
      )),
    )),
    _primary_expression: $ => choice(
      $._literal,
      $.parenthesized_expression,
      $.subscript,
      $.method_call,
      $.attribute_access,
      $.function_call,
      $.identifier,
    ),
    binary_expression: $ => choice(
      prec.left(1, seq(field('left', $._expression), field('operator', 'or'), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', 'and'), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', choice('==', '!=', '<', '>', '<=', '>=')), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', 'in'), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', alias(seq('not', 'in'), 'not in')), field('right', $._expression))),

      prec.left(5, seq(field('left', $._expression), field('operator', '~'), field('right', $._expression))),
      prec.left(6, seq(field('left', $._expression), field('operator', '+'), field('right', $._expression))),
      prec.left(6, seq(field('left', $._expression), field('operator', '-'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '*'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '/'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '//'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '%'), field('right', $._expression))),
      prec.right(8, seq(field('left', $._expression), field('operator', '**'), field('right', $._expression))),
    ),
    if_keyword: $ => token(prec(1, 'if')),
    else_keyword: $ => token(prec(1, 'else')),
    endif_keyword: $ => token(prec(1, 'endif')),
    for_keyword: $ => token(prec(1, 'for')),
    in_keyword: $ => token(prec(1, 'in')),
    endfor_keyword: $ => token(prec(1, 'endfor')),
    extends_keyword: $ => token(prec(1, 'extends')),
    macro_keyword: $ => token(prec(1, 'macro')),
    endmacro_keyword: $ => token(prec(1, 'endmacro')),
    call_keyword: $ => token(prec(1, 'call')),
    endcall_keyword: $ => token(prec(1, 'endcall')),
    do_keyword: $ => token(prec(1, 'do')),
    debug_keyword: $ => token(prec(1, 'debug')),
    filter_keyword: $ => token(prec(1, 'filter')),
    endfilter_keyword: $ => token(prec(1, 'endfilter')),
    ternary_expression: $ => prec.right(0, seq(
      field('value', $._expression),
      $.if_keyword,
      field('condition', $._expression),
      optional(seq(
        $.else_keyword,
        field('alternative', $._expression),
      )),
    )),
    _expression: $ => choice(
      $._primary_expression,
      $.binary_expression,
      $.unary_expression,
      $.test_expression,
      $.ternary_expression,
      $.filter,
    ),
    print: $ => seq(
      $.print_begin,
      $._expression,
      $.print_end,
    ),

    if_open: $ => seq(
      $.statement_begin,
      $.if_keyword,
      field('condition', $._expression),
      $.statement_end,
    ),
    if_close: $ => seq(
      $.statement_begin,
      $.endif_keyword,
      $.statement_end,
    ),
    _body_node: $ => choice(
      $.print, $.if_statement, $.for_statement, $.set_statement, $.set_block,
      $.include_statement, $.import_statement, $.from_statement,
      $.call_block, $.with_statement, $.block_statement,
      $.macro_statement, $.trans_statement, $.autoescape_statement,
      $.raw_statement, $.do_statement, $.debug_statement, $.filter_statement,
      $.custom_statement, $.comment, $.text,
    ),
    if_statement: $ => seq(
      $.if_open,
      repeat(prec.right(choice($._body_node, $.elif_clause, $.else_clause))),
      $.if_close,
    ),

    _for_target: $ => choice(
      $.identifier,
      $.unpacking,
    ),
    for_open: $ => seq(
      $.statement_begin,
      $.for_keyword,
      field('target', $._for_target),
      $.in_keyword,
      field('iterable', $._expression),
      optional($.for_condition),
      optional($.recursive_keyword),
      $.statement_end,
    ),
    for_close: $ => seq(
      $.statement_begin,
      $.endfor_keyword,
      $.statement_end,
    ),
    for_statement: $ => seq(
      $.for_open,
      repeat(prec.right($._body_node)),
      optional(seq(
        $.else_clause,
        repeat(prec.right($._body_node)),
      )),
      $.for_close,
    ),

    extends_statement: $ => seq(
      $.statement_begin,
      $.extends_keyword,
      field('template', $._expression),
      $.statement_end,
    ),

    parameter: $ => choice(
      seq(field('name', $.identifier), optional(seq('=', field('default', $._expression)))),
      seq('*', field('name', $.identifier)),
      seq('**', field('name', $.identifier)),
    ),
    _parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
        optional(','),
      )),
      ')',
    ),
    macro_open: $ => seq(
      $.statement_begin,
      $.macro_keyword,
      field('name', $.identifier),
      $._parameter_list,
      $.statement_end,
    ),
    macro_close: $ => seq(
      $.statement_begin,
      $.endmacro_keyword,
      optional(field('name', $.identifier)),
      $.statement_end,
    ),
    macro_statement: $ => seq(
      $.macro_open,
      repeat(prec.right($._body_node)),
      $.macro_close,
    ),

    _call_target: $ => prec.left(seq(
      field('object', choice($.identifier, alias($._call_attr_chain, $.attribute_access))),
      '.',
      field('method', $.identifier),
      $._argument_list,
    )),
    call_open: $ => seq(
      $.statement_begin,
      $.call_keyword,
      optional($.caller_args),
      field('call', choice($.function_call, alias($._call_target, $.method_call))),
      $.statement_end,
    ),
    call_close: $ => seq(
      $.statement_begin,
      $.endcall_keyword,
      $.statement_end,
    ),
    call_block: $ => seq(
      $.call_open,
      repeat(prec.right($._body_node)),
      $.call_close,
    ),

    do_statement: $ => seq(
      $.statement_begin,
      $.do_keyword,
      field('expression', $._expression),
      $.statement_end,
    ),

    debug_statement: $ => seq(
      $.statement_begin,
      $.debug_keyword,
      $.statement_end,
    ),

    filter_open: $ => seq(
      $.statement_begin,
      $.filter_keyword,
      field('filter', $.filter_name),
      repeat(seq('|', field('filter', $.filter_name))),
      $.statement_end,
    ),
    filter_close: $ => seq(
      $.statement_begin,
      $.endfilter_keyword,
      $.statement_end,
    ),
    filter_statement: $ => seq(
      $.filter_open,
      repeat(prec.right($._body_node)),
      $.filter_close,
    ),

    _custom_argument: $ => choice(
      $.keyword_argument,
      $._expression,
    ),
    custom_open: $ => prec(-2, seq(
      $.statement_begin,
      field('name', $.identifier),
      repeat(field('argument', $._custom_argument)),
      $.statement_end,
    )),
    custom_close: $ => prec(-1, seq(
      $.statement_begin,
      field('name', alias(/end[a-zA-Z_][a-zA-Z0-9_]*/, $.identifier)),
      $.statement_end,
    )),

    text: $ => choice(
      /[^{]+/,
      /\{[^{%#]/,
    ),
  }
});
