test/corpus/debug_statement.txt
================================================================================
Debug statement
================================================================================
{% debug %}
--------------------------------------------------------------------------------

(source_file
  (debug_statement
    (statement_begin)
    (debug_keyword)
    (statement_end)))
