test/corpus/dict.txt
================================================================================
Empty dict
================================================================================
{{ {} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict)
    (print_end)))

================================================================================
Single pair
================================================================================
{{ {"a": 1} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (string)
        value: (number)))
    (print_end)))

================================================================================
Multiple pairs
================================================================================
{{ {"a": 1, "b": 2} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (string)
        value: (number))
      (pair
        key: (string)
        value: (number)))
    (print_end)))

================================================================================
Dict with spaces
================================================================================
{{ { "a" : 1 , "b" : 2 } }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (string)
        value: (number))
      (pair
        key: (string)
        value: (number)))
    (print_end)))

================================================================================
Dict with trailing comma
================================================================================
{{ {"a": 1,} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (string)
        value: (number)))
    (print_end)))

================================================================================
Nested dict
================================================================================
{{ {"a": {"b": 1}} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (string)
        value: (dict
          (pair
            key: (string)
            value: (number)))))
    (print_end)))

================================================================================
Dict with identifier key
================================================================================
{{ {key: 1} }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (dict
      (pair
        key: (identifier)
        value: (number)))
    (print_end)))
